# sponge

./: .gitignore  README.md  docker-compose.override.example.yml  docker-compose.yml  package-lock.json  package.json
.claude/: instructions.md
.husky/: pre-commit
backend/: .env.example  Dockerfile  conftest.py  manage.py  pyproject.toml  ruff.toml
backend/apps/ai/: description_enhancer.py  llm_client.py
backend/apps/core/: auth_middleware.py  cache.py  http_client.py  models.py  rate_limiter.py  ssrf_protection.py  supabase_client.py
backend/apps/core/tests/: test_cache.py  test_rate_limiter.py  test_ssrf_protection.py
backend/apps/crawler/: link_crawler.py  page_fetcher.py  robots_parser.py  sitemap_parser.py
backend/apps/extractor/: browser_provider.py  content_extractor.py  meta_extractor.py  playwright_provider.py
backend/apps/extractor/tests/: test_meta_extractor.py
backend/apps/generator/: llms_txt_builder.py  url_categorizer.py
backend/apps/generator/tests/: test_llms_txt_builder.py  test_url_categorizer.py
backend/apps/jobs/: apps.py  models.py  serializers.py  tasks.py  urls.py  views.py
backend/apps/jobs/migrations/: 0001_initial.py  0002_rename_quick_to_default.py
backend/apps/jobs/tests/: test_views.py
backend/config/: __init__.py  asgi.py  celery.py  exception_handler.py  urls.py  wsgi.py
backend/config/settings/: base.py  development.py  production.py  test.py
docs/: README.md
frontend/: eslint.config.mjs  next.config.ts  package-lock.json  package.json  sentry.client.config.ts  sentry.server.config.ts  tsconfig.json
(+83 files in other folders)
